; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_gdbarch.c_gdbarch_use_struct_convention.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_gdbarch.c_gdbarch_use_struct_convention.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdbarch = type { i32 (i32, %struct.type*)* }
%struct.type = type { i32 }

@gdbarch_debug = common dso_local global i32 0, align 4
@gdb_stdlog = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"gdbarch_use_struct_convention called\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gdbarch_use_struct_convention(%struct.gdbarch* %0, i32 %1, %struct.type* %2) #0 {
  %4 = alloca %struct.gdbarch*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.type*, align 8
  store %struct.gdbarch* %0, %struct.gdbarch** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.type* %2, %struct.type** %6, align 8
  %7 = load %struct.gdbarch*, %struct.gdbarch** %4, align 8
  %8 = icmp ne %struct.gdbarch* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @gdb_assert(i32 %9)
  %11 = load %struct.gdbarch*, %struct.gdbarch** %4, align 8
  %12 = getelementptr inbounds %struct.gdbarch, %struct.gdbarch* %11, i32 0, i32 0
  %13 = load i32 (i32, %struct.type*)*, i32 (i32, %struct.type*)** %12, align 8
  %14 = icmp ne i32 (i32, %struct.type*)* %13, null
  %15 = zext i1 %14 to i32
  %16 = call i32 @gdb_assert(i32 %15)
  %17 = load i32, i32* @gdbarch_debug, align 4
  %18 = icmp sge i32 %17, 2
  br i1 %18, label %19, label %22

19:                                               ; preds = %3
  %20 = load i32, i32* @gdb_stdlog, align 4
  %21 = call i32 @fprintf_unfiltered(i32 %20, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  br label %22

22:                                               ; preds = %19, %3
  %23 = load %struct.gdbarch*, %struct.gdbarch** %4, align 8
  %24 = getelementptr inbounds %struct.gdbarch, %struct.gdbarch* %23, i32 0, i32 0
  %25 = load i32 (i32, %struct.type*)*, i32 (i32, %struct.type*)** %24, align 8
  %26 = load i32, i32* %5, align 4
  %27 = load %struct.type*, %struct.type** %6, align 8
  %28 = call i32 %25(i32 %26, %struct.type* %27)
  ret i32 %28
}

declare dso_local i32 @gdb_assert(i32) #1

declare dso_local i32 @fprintf_unfiltered(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
